--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
 }
 
 .fade {
-  position: relative;
+  position: center;
   width: 100%;
   min-height: 60vh;
   top: -25px;
@@ -30,7 +30,7 @@ body {
 }
 
 .crawl {
-  position: relative;
+  position: center;
   top: 9999px;
   transform-origin: 50% 100%;
   animation: crawl 60s linear;
