--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ body {
   letter-spacing: 6px;
   line-height: 150%;
   perspective: 400px;
-  text-align: justify;
+  text-align: center;
 }
 
 .crawl {
